verified API connection, started to grab data needed for base functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+   
+    
   </head>
-  <body></body>
+  <body>
+    <div class='container'>
+      <img id="weather_icon" src="#">
+      <p><span id="temp"></span><span id="temp_unit"></span></p>
+    </div>
+    
+    <script src="config.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
