added default fetch to Denver on page load

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body onload="getData()">
     <div id="search">
       <input id="search_box" type="text" placeholder="City Name" /><button
         type="search"
